--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131121683-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'UA-131121683-1');
-    </script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="https://gitexplorer.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
@@ -52,12 +41,8 @@
       name="twitter:description"
       content="GitExplorer: Find the right git commands you need without digging through the web"
     />
-    <meta name="twitter:image:src" content="https://gitexplorer.com/images/gitcommand.png" />
-    <meta name="twitter:site" content="@gitexplorer" />
-    <meta name="twitter:creator" content="@gitexplorer" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Git Explorer</title>
+    <title>eksctl explorer</title>
   </head>
 
   <body>
