Updated eksctl explorer.

--- a/public/index.html
+++ b/public/index.html
@@ -11,35 +11,15 @@
     />
     <meta
       name="description"
-      content="GitExplorer: Find the right git commands you need without digging through the web"
+      content="eksctl explorer: a web-based tool to help you explore the eksctl command line tool"
     />
-    <meta name="pagename" content="GitExplorer: Find the right git commands you need without digging through the web" />
-    <meta name="url" content="https://gitexplorer.com" />
+    <meta name="pagename" content="EksctlExplorer: a web-based tool to help you explore the eksctl command line tool." />
+    <meta name="url" content="https://eksctl.learntosolveit.com" />
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="GitExplorer" />
+    <meta itemprop="name" content="eksctl explorer" />
     <meta
       itemprop="description"
-      content="GitExplorer: Find the right git commands you need without digging through the web"
-    />
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://gitexplorer.com" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="GitExplorer" />
-    <meta
-      property="og:description"
-      content="GitExplorer: Find the right git commands you need without digging through the web"
-    />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="GitExplorer" />
-    <meta property="og:image" content="https://gitexplorer.com/images/gitcommand.png" />
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="GitExplorer" />
-    <meta
-      name="twitter:description"
-      content="GitExplorer: Find the right git commands you need without digging through the web"
+      content="eksctl explorer: a web-based tool to help you explore the eksctl command line tool"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>eksctl explorer</title>
