Update index and App.js

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="keywords"
-      content="git, delete branch in git, github, gitlab, bitbucket, git commit, git problems, git errors, git delete branch, git amend, git ammend, git branch delete, git undo, compare commits git, modify commit message, show committed changes, staged changes, show uncommitted changes, undo git reset"
+      content="eks eksctl aws kubernetes k8s"
     />
     <meta
       name="description"
       content="eksctl explorer: a web-based tool to help you explore the eksctl command line tool"
     />
-    <meta name="pagename" content="EksctlExplorer: a web-based tool to help you explore the eksctl command line tool." />
+    <meta name="pagename" content="eksctl explorer: a web-based tool to help you explore the eksctl command line tool." />
     <meta name="url" content="https://eksctl.learntosolveit.com" />
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="eksctl explorer" />
