--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="https://eksctlexplorer.netlify.app/favicon.ico" />
+    <link rel="shortcut icon" href="https://kubectlexplorer.netlify.app/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="keywords"
-      content="eks eksctl aws kubernetes k8s"
+      content="eks kubectl aws kubernetes k8s"
     />
     <meta
       name="description"
-      content="eksctl explorer: a web-based tool to help you explore the eksctl command line tool"
+      content="kubectl explorer: a web-based tool to help you explore the kubectl command line tool"
     />
-    <meta name="pagename" content="eksctl explorer: a web-based tool to help you explore the eksctl command line tool." />
-    <meta name="url" content="https://eksctl.learntosolveit.com" />
+    <meta name="pagename" content="kubectl explorer: a web-based tool to help you explore the kubectl command line tool." />
+    <meta name="url" content="https://kubectl.learntosolveit.com" />
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="eksctl explorer" />
+    <meta itemprop="name" content="kubectl explorer" />
     <meta
       itemprop="description"
-      content="eksctl explorer: a web-based tool to help you explore the eksctl command line tool"
+      content="kubectl explorer: a web-based tool to help you explore the kubectl command line tool"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>eksctl explorer</title>
+    <title>kubectl explorer</title>
   </head>
 
   <body>
